--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Extreme VPN - Fast & Secure VPN Provider </title>
     <meta name="description" content="">
     <link rel="canonical" href="https://www.extremevpn.xyz">
-    <meta property="og:url" content="https://www.extremevpn.xyz">
+    <meta property="og:url" content="https://www.extremevpn.xyzz">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
